# lru-cache

./: AGENTS.md  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
include/: lru_cache.h  lru_cache_version.h.in
src/: lru_cache.c  meson.build
tests/: meson.build  test_lru_cache.c
